# GitHubSync

./: .replit  README.md  git_project_setup.sh  install.sh  pyproject.toml
telegram-main/: bot.py  bot.py.original  bot_wrapper.py  debug_logger.py  debug_logs.txt  main.py  main_fixed.py  main_simplified.py  requirements.txt  run_telegram_bot.py  server_status.json  server_status.py  test_bot.py
telegram-main/templates/: status.html
